--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,11 @@
 - type: github
   icon: 'fab fa-github'
 
-- type: twitter
-  icon: 'fab fa-twitter'
+- type: instagram
+  icon: 'fab fa-instagram'
+
+# - type: twitter
+#   icon: 'fab fa-twitter'
 
 - type: email
   icon: 'fas fa-envelope'
